--- a/views/drinks/add.hbs
+++ b/views/drinks/add.hbs
@@ -27,16 +27,16 @@
                         </p>
 
                         <!-- Form -->
+                            <form method="POST" action="/manage-drinks/add" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <label>Tên</label>
                                     <input type="text" class="form-control" required placeholder="Tên sản phẩm" name="name" id="name"/>
                                 </div>
 
-                                <div class="form-group col-sm-2 img-picker-container"> 
+                                 <div class="form-group col-sm-2 img-picker-container"> 
                                     <label>Ảnh đại diện</label>
-                                    <div class="img-picker"></div>
+                                    <div class="img-picker" id="avatarPicker"></div>
                                 </div> 
-
 
                                 <div class="form-group">
                                     <label>Mô tả</label>
@@ -48,17 +48,17 @@
                                 <div class="form-group img-picker-container"> 
                                     <label>Ảnh mô tả</label>
                                     <div class="row">
-                                    <div class="img-picker col-sm-2"></div>
-                                    <div class="img-picker col-sm-2"></div>
-                                    <div class="img-picker col-sm-2"></div>
-                                    <div class="img-picker col-sm-2"></div>
-                                </div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker1"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker2"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker3"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker4"></div>
+                                    </div>
                                 </div> 
 
                                 <div class="form-group">
                                     <label>Giá tiền</label>
                                     <div class="input-group">
-                                        <input data-parsley-type="number" type="text"
+                                        <input data-parsley-type="number" type="number"
                                             class="form-control" required
                                             placeholder="Giá tiền sản phẩm"
                                             name="price"
@@ -72,7 +72,7 @@
 
                                 <div class="form-group">
                                     <div>
-                                        <button class="btn btn-primary waves-effect waves-light" onclick="sendInfo()">
+                                        <button type="submit" class="btn btn-primary waves-effect waves-light">
                                             Thêm
                                         </button>
 
@@ -84,6 +84,7 @@
                                         </a>
                                     </div>
                                 </div>
+                            </form>
                         </div>
                     </div>
                 </div> <!-- end col -->
@@ -96,53 +97,4 @@
         © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
     </footer>
 </div>
-
-<script>
-    function sendInfo()
-    {
-        const name = document.getElementById("name");
-
-        if (name.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Tên Sản Phẩm")
-            return false
-        }
-
-        const description = document.getElementById("description");
-
-        if (description.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Mô Tả Sản Phẩm")
-            return false
-        }
-
-        const price = document.getElementById("price");
-
-        if (price.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Giá Sản Phẩm")
-            return false
-        }
-
-        const form = document.createElement("form");
-        form.method = "POST";
-        form.action = "/manage-drinks/add";
-
-        const inputName = document.createElement("input");
-        inputName.name = "name";
-        inputName.value = name.value;
-        form.appendChild(inputName);
-
-        const inputDescription = document.createElement("input");
-        inputDescription.name = "description";
-        inputDescription.value = description.value;
-        form.appendChild(inputDescription);
-
-        const inputPrice = document.createElement("input");
-        inputPrice.name = "price";
-        inputPrice.value = price.value;
-        form.appendChild(inputPrice);
-
-        document.body.appendChild(form);
-
-        form.submit();
-    }
-</script>
 
