--- a/views/pizza/add.hbs
+++ b/views/pizza/add.hbs
@@ -35,11 +35,6 @@
                                 <div class="form-group col-sm-2 img-picker-container"> 
                                     <label>Ảnh đại diện</label>
                                     <div class="img-picker" id="avatarPicker"></div>
-                                    {{!-- <div class="form-control img-upload-btn">
-                                        <i class="fas fa-plus"></i>
-                                        <input type="file" name="avatarPicker" accept="image/*" onchange="loadFile(event)">
-                                        <img id="output">
-                                    </div> --}}
                                 </div> 
 
                                 <div class="form-group">
@@ -52,11 +47,11 @@
                                 <div class="form-group img-picker-container"> 
                                     <label>Ảnh mô tả</label>
                                     <div class="row">
-                                    <div class="img-picker col-sm-2" id="descriptionPicker1"></div>
-                                    <div class="img-picker col-sm-2" id="descriptionPicker2"></div>
-                                    <div class="img-picker col-sm-2" id="descriptionPicker3"></div>
-                                    <div class="img-picker col-sm-2" id="descriptionPicker4"></div>
-                                </div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker1"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker2"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker3"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker4"></div>
+                                    </div>
                                 </div> 
 
                                 <div class="form-group">
@@ -150,7 +145,7 @@
 
                                 <div class="form-group">
                                     <div>
-                                        <button type="submit" class="btn btn-primary waves-effect waves-light" {{!--onclick="sendInfo()"--}}>
+                                        <button type="submit" class="btn btn-primary waves-effect waves-light">
                                             Thêm
                                         </button>
 
@@ -175,134 +170,3 @@
         © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
     </footer>
 </div>
-
-<script>
-
-
-function sendInfo()
-{
-    const name = document.getElementById("name");
-
-    if (name.value.length == 0) {
-        alert("Vui Lòng Không Bỏ Trống Tên Sản Phẩm")
-        return false
-    }
-
-    const description = document.getElementById("description");
-
-    if (description.value.length == 0) {
-        alert("Vui Lòng Không Bỏ Trống Mô Tả Sản Phẩm")
-        return false
-    }
-
-    const price = document.getElementById("price");
-
-    if (price.value.length == 0) {
-        alert("Vui Lòng Không Bỏ Trống Giá Sản Phẩm")
-        return false
-    }
-
-    const kind = document.getElementById("kind");
-
-    const size1 = document.getElementById("size1").checked
-    const size2 = document.getElementById("size2").checked
-    const size3 = document.getElementById("size3").checked
-    const dough1 = document.getElementById("dough1").checked
-    const dough2 = document.getElementById("dough2").checked
-    const toping1 = document.getElementById("toping1").checked
-    const toping2 = document.getElementById("toping2").checked
-    const toping3 = document.getElementById("toping3").checked
-    const toping4 = document.getElementById("toping4").checked
-
-    const form = document.createElement("form");
-    form.method = "POST";
-    form.action = "/manage-pizza/add";
-
-    const inputName = document.createElement("input");
-    inputName.name = "name";
-    inputName.value = name.value;
-    form.appendChild(inputName);
-
-    const inputDescription = document.createElement("input");
-    inputDescription.name = "description";
-    inputDescription.value = description.value;
-    form.appendChild(inputDescription);
-
-    const inputPrice = document.createElement("input");
-    inputPrice.name = "price";
-    inputPrice.value = price.value;
-    form.appendChild(inputPrice);
-
-    const inputKind = document.createElement("input");
-    inputKind.name = "kind";
-    inputKind.value = kind.value;
-    form.appendChild(inputKind);
-
-    const inputSize1 = document.createElement("input");
-    inputSize1.name = "size1";
-    inputSize1.value = size1;
-    form.appendChild(inputSize1);
-
-    const inputSize2 = document.createElement("input");
-    inputSize2.name = "size2";
-    inputSize2.value = size2;
-    form.appendChild(inputSize2);
-
-    const inputSize3 = document.createElement("input");
-    inputSize3.name = "size3";
-    inputSize3.value = size3;
-    form.appendChild(inputSize3);
-
-    const inputDough1 = document.createElement("input");
-    inputDough1.name = "dough1";
-    inputDough1.value = dough1;
-    form.appendChild(inputDough1);
-
-    const inputDough2 = document.createElement("input");
-    inputDough2.name = "dough2";
-    inputDough2.value = dough2;
-    form.appendChild(inputDough2);
-
-    const inputToping1 = document.createElement("input");
-    inputToping1.name = "toping1";
-    inputToping1.value = toping1;
-    form.appendChild(inputToping1);
-
-    const inputToping2 = document.createElement("input");
-    inputToping2.name = "toping2";
-    inputToping2.value = toping2;
-    form.appendChild(inputToping2);
-
-    const inputToping3 = document.createElement("input");
-    inputToping3.name = "toping3";
-    inputToping3.value = toping3;
-    form.appendChild(inputToping3);
-
-    const inputToping4 = document.createElement("input");
-    inputToping4.name = "toping4";
-    inputToping4.value = toping4;
-    form.appendChild(inputToping4);
-
-    document.body.appendChild(form);
-
-    form.submit();
-}
-
-var loadFile = function(event) {
-    let text_center = $('<div class="text-center"></div>')
-    let img = $('<img src="'+event.target.files[0]+'" class="img-responsive img-rounded">')
-
-    let btn =  $('<button class="btn btn-outline-primary waves-effect waves-light btn-remove-img-upload"></button>')
-    let small = $('<small>Remove</small>')     
-
-    btn.append(small)
-
-    btn.click(function() {
-        var btn = create_btn(that, settings);
-        $(that).html(btn);
-    });
-
-    text_center.append(img).append(btn)
-        
-};
-</script>
