--- a/views/sides/add.hbs
+++ b/views/sides/add.hbs
@@ -27,16 +27,16 @@
                         </p>
 
                         <!-- Form -->
+                            <form method="POST" action="/manage-sides/add" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <label>Tên</label>
                                     <input type="text" class="form-control" required placeholder="Tên sản phẩm" name="name" id="name"/>
                                 </div>
 
-                                <div class="form-group col-sm-2 img-picker-container"> 
+                                 <div class="form-group col-sm-2 img-picker-container"> 
                                     <label>Ảnh đại diện</label>
-                                    <div class="img-picker"></div>
+                                    <div class="img-picker" id="avatarPicker"></div>
                                 </div> 
-
 
                                 <div class="form-group">
                                     <label>Mô tả</label>
@@ -48,21 +48,21 @@
                                 <div class="form-group img-picker-container"> 
                                     <label>Ảnh mô tả</label>
                                     <div class="row">
-                                    <div class="img-picker col-sm-2" id="descriptionPicker1" name="descriptionPicker1"></div>
-                                    <div class="img-picker col-sm-2" id="descriptionPicker2" name="descriptionPicker2"></div>
-                                    <div class="img-picker col-sm-2" id="descriptionPicker3" name="descriptionPicker3"></div>
-                                    <div class="img-picker col-sm-2" id="descriptionPicker4" name="descriptionPicker4"></div>
-                                </div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker1"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker2"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker3"></div>
+                                        <div class="img-picker col-sm-2" id="descriptionPicker4"></div>
+                                    </div>
                                 </div> 
 
                                 <div class="form-group">
                                     <label>Giá tiền</label>
                                     <div class="input-group">
-                                        <input data-parsley-type="number" type="text"
-                                                class="form-control" required
-                                                placeholder="Giá tiền sản phẩm"
-                                                name="price"
-                                                id="price"/>
+                                        <input data-parsley-type="number" type="number"
+                                            class="form-control" required
+                                            placeholder="Giá tiền sản phẩm"
+                                            name="price"
+                                            id="price"/>
 
                                         <div class="input-group-append">
                                             <span class="input-group-text">VNĐ</span>
@@ -72,16 +72,19 @@
 
                                 <div class="form-group">
                                     <div>
-                                        <button class="btn btn-primary waves-effect waves-light" onclick="sendInfo()">
+                                        <button type="submit" class="btn btn-primary waves-effect waves-light">
                                             Thêm
                                         </button>
-                                         <a href="/manage-sides">
-                                        <button type="reset" class="btn btn-secondary waves-effect m-l-5">
-                                            Bỏ qua
-                                        </button>
+
+                                        <a href="/manage-sides">
+                                            <button type="reset" class="btn btn-secondary waves-effect m-l-5">
+                                                Bỏ qua
+                                                
+                                            </button>
                                         </a>
                                     </div>
                                 </div>
+                            </form>
                         </div>
                     </div>
                 </div> <!-- end col -->
@@ -94,78 +97,4 @@
         © 2019 Stexo <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesdesign</span>.
     </footer>
 </div>
-
-<script>
-    function sendInfo()
-    {
-        const name = document.getElementById("name");
-
-        if (name.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Tên Sản Phẩm")
-            return false
-        }
-
-        const description = document.getElementById("description");
-
-        if (description.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Mô Tả Sản Phẩm")
-            return false
-        }
-
-        const price = document.getElementById("price");
-
-        if (price.value.length == 0) {
-            alert("Vui Lòng Không Bỏ Trống Giá Sản Phẩm")
-            return false
-        }
-
-        const form = document.createElement("form");
-        form.method = "POST";
-        form.action = "/manage-sides/add";
-
-        const inputName = document.createElement("input");
-        inputName.name = "name";
-        inputName.value = name.value;
-        form.appendChild(inputName);
-
-        const inputDescription = document.createElement("input");
-        inputDescription.name = "description";
-        inputDescription.value = description.value;
-        form.appendChild(inputDescription);
-
-        const inputPrice = document.createElement("input");
-        inputPrice.name = "price";
-        inputPrice.value = price.value;
-        form.appendChild(inputPrice);
-
-        document.body.appendChild(form);
-
-        form.submit();
-    }
-
-
-</script>
-<script>
-    $(document).ready(function() {
-        // $('.img-picker').imagePicker({name: 'avatarImage'});
-
-        let avatarPicker = $(document.getElementById('avatarPicker'))
-        avatarPicker.imagePicker({name: 'avatarPicker'});
-
-        let descriptionPicker1 = $(document.getElementById('descriptionPicker1'))
-        descriptionPicker1.imagePicker({name: 'descriptionPicker1'});
-
-        let descriptionPicker2 = $(document.getElementById('descriptionPicker2'))
-        descriptionPicker2.imagePicker({name: 'descriptionPicker2'});
-
-        let descriptionPicker3 = $(document.getElementById('descriptionPicker3'))
-        descriptionPicker3.imagePicker({name: 'descriptionPicker3'});
-
-        let descriptionPicker4 = $(document.getElementById('descriptionPicker4'))
-        descriptionPicker4.imagePicker({name: 'descriptionPicker4'});
-
-    })
-</script>
-
-
 
